--- a/BioCro/DARPA/high_light.Rmd
+++ b/BioCro/DARPA/high_light.Rmd
@@ -8,7 +8,7 @@ urlcolor: blue
 ### Description of treatment and data 
 
 
-### Initial run of BioCro for biomass estimates
+### Initial run of BioCro for biomass & transpiration estimates
 
 This is based off of the working run for the high night temperature low light treatment, which is run 3 in [temp_exps_biomass.Rmd](https://github.com/az-digitalag/model-vignettes/blob/master/BioCro/DARPA/temp_exps_biomass.Rmd). 
 
@@ -96,10 +96,61 @@ plot_daily_biomass <- ggplot(data = daily_biomass_estimates) +
   geom_ribbon(aes(day, ymin = lcl_50, ymax = ucl_50), alpha = 0.1) +
   geom_point(data = biomass_measurements, aes(x = days_grown, y = total_biomass_kgm2)) +
   xlim(x = c(0, 65)) +
-  xlab("Day") + 
+  xlab("") + 
   ylab("Total Biomass (kg/m2)") +
-  theme_classic() 
+  theme_classic() +
+  theme(axis.text.x = element_blank(), 
+        axis.ticks.x = element_blank(), 
+        plot.margin=unit(c(1, 1, 0, 1), "cm"))
 plot_daily_biomass
+```
+
+Plot daily transpiration estimates from the high light treatment. 
+
+```{r}
+load('high_light_results/out/SA-median/biocro_output.RData')
+timescale <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
+rm(biocro_result)
+load("high_light_results/ensemble.ts.NOENSEMBLEID.TVeg.2019.2019.Rdata")
+convert_transp <- function(x) ud.convert(x, "kg/m2/s", "kg/m2/h")
+
+daily_transp <- data.frame(timescale, t(ensemble.ts[["TVeg"]])) %>% 
+  gather(ensemble, transpiration, X1:X100) %>% 
+  mutate_at(vars(transpiration), convert_transp) %>% 
+  group_by(day, hour) %>% 
+  summarise(mean = mean(transpiration, na.rm = TRUE), 
+            median = median(transpiration, na.rm = TRUE), 
+            sd = sd(transpiration, na.rm = TRUE), 
+            lcl_50 = quantile(transpiration, probs = c(0.25), na.rm = TRUE), 
+            ucl_50 = quantile(transpiration, probs = c(0.75), na.rm = TRUE),
+            lcl_95 = quantile(transpiration, probs = c(0.025), na.rm = TRUE), 
+            ucl_95 = quantile(transpiration, probs = c(0.975), na.rm = TRUE)) %>% 
+  group_by(day) %>% 
+  summarise(mean = sum(mean), 
+            median = sum(median), 
+            sd = sqrt(sum(sd^2)), 
+            lcl_50 = sum(lcl_50), 
+            ucl_50 = sum(ucl_50), 
+            lcl_95 = sum(lcl_95), 
+            ucl_95 = sum(ucl_95))
+rm(ensemble.ts)
+
+plot_daily_transp <- ggplot(data = daily_transp) + 
+  geom_line(aes(day, y = median)) +
+  geom_ribbon(aes(day, ymin = lcl_95, ymax = ucl_95), alpha = 0.1) +
+  geom_ribbon(aes(day, ymin = lcl_50, ymax = ucl_50), alpha = 0.1) +
+  xlim(x = c(0, 65)) +
+  xlab("Day of Experiment") + 
+  ylab("Transpiration (kg/m2/day)") +
+  theme_classic() + 
+  scale_y_continuous(labels = scales::number_format(accuracy = 0.01)) +
+  theme(plot.margin=unit(c(-0.5, 1, 1, 1), "cm"))
+```
+
+Plot biomass and transpiration together. 
+
+```{r}
+gridExtra::grid.arrange(plot_daily_biomass, plot_daily_transp, ncol = 1)
 ```
 
 ### Calculate biomass coefficients
