--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -193,7 +193,7 @@ Clean up data to have the final columns:
 upload_parameters_gr <- all_parameters %>% 
   mutate(notes = paste("row", row_number(), "in https://docs.google.com/spreadsheets/d/1doQI0T7vav7LmNdMEoZJDx9iY_Imqa229CLRbRvurFc/#gid=967233489")) %>% 
   filter(genotype == "ME034", 
-         TR %in% c("greenhouse"), 
+         TR  == "greenhouse", 
          trait %in% c("vmax", "Rd", "g1M", "g1BB")) %>% 
   mutate(value = ifelse(!is.na(New_Value), New_Value, Value), 
          se = ifelse(!is.na(New_Value), SE.1, SE)) %>% 
