--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -194,21 +194,21 @@ upload_parameters_gr <- all_parameters %>%
   mutate(notes = paste("row", row_number(), "in https://docs.google.com/spreadsheets/d/1doQI0T7vav7LmNdMEoZJDx9iY_Imqa229CLRbRvurFc/#gid=967233489")) %>% 
   filter(genotype == "ME034", 
          TR %in% c("greenhouse"), 
-         trait %in% c("vmax", "Rd", "g1M", "g1BB")) %>% 
-  mutate(value = ifelse(!is.na(New_Value), New_Value, Value), 
-         se = ifelse(!is.na(New_Value), SE.1, SE)) %>% 
+         trait %in% c("vmax", "Rd", "g1M", "g1BB", "g0BB")) %>% 
+  # mutate(value = ifelse(!is.na(New_Value), New_Value, Value), 
+  #        se = ifelse(!is.na(New_Value), SE.1, SE)) %>% 
   mutate(date = ymd(paste0(str_sub(File, -4, -1), 
                            "-", match(str_sub(File, 1, 3), month.abb), 
                            "-", str_sub(File, -6, -5))), 
          treatment = case_when(TR == "greenhouse" ~ "greenhouse")) %>% 
-  select(-File, -genotype, -TR, -rep, -method, -Value, -SE, -New_Value, -SE.1, -SD) %>% 
-  spread(trait, value) %>% 
+  select(-File, -genotype, -TR, -rep, -method, -SD, -TR.1) %>% 
+  spread(trait, Value) %>% 
   rename(local_datetime = date, 
          Vcmax = vmax, 
          leaf_respiration_rate_m2 = Rd, 
          stomatal_slope.g1 = g1M, 
-         stomatal_slope.BB = g1BB, 
-         SE = se) %>% 
+         stomatal_slope.BB = g1BB,
+         cuticular_cond = g0BB) %>% 
   mutate(leafT = 25, 
          n = 9999) %>% 
   replace(is.na(.), "")
