--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -195,13 +195,13 @@ upload_parameters_gr <- all_parameters %>%
   filter(genotype == "ME034", 
          TR  == "greenhouse", 
          trait %in% c("vmax", "Rd", "g1M", "g1BB", "g0BB")) %>% 
-  mutate(date = ymd(paste0(str_sub(File, -4, -1), 
+  mutate(Date = ymd(paste0(str_sub(File, -4, -1), 
                            "-", match(str_sub(File, 1, 3), month.abb), 
                            "-", str_sub(File, -6, -5))), 
          treatment = case_when(TR == "greenhouse" ~ "greenhouse")) %>% 
   select(-File, -genotype, -TR, -rep, -method, -SD, -TR.1) %>% 
   spread(trait, Value) %>% 
-  rename(local_datetime = date, 
+  rename(local_datetime = Date, 
          Vcmax = vmax, 
          leaf_respiration_rate_m2 = Rd, 
          stomatal_slope.g1 = g1M, 
@@ -222,7 +222,7 @@ write.csv(upload_parameters_gr, "upload_params_data/phys_parameters_gr.csv", row
 
 Split dataframe for each parameter type.
 ```{r}
-vars<-colnames(upload_parameters_gr)[6:10]
+vars<-colnames(upload_parameters_gr)[5:9]
 for(i in vars){
   removecols <- setdiff(vars, i)
   new <- subset(upload_parameters_gr, select= setdiff(colnames(upload_parameters_gr), removecols))
