--- a/BioCro/DARPA/upload_params.Rmd
+++ b/BioCro/DARPA/upload_params.Rmd
@@ -29,33 +29,32 @@ Clean up data to have the final columns:
 3. `treatment`: specifies record's treatment using BETYdb treatment names
 4. `Vcmax`, `leaf_respiration_rate_m2`, `stomatal_slope.g1`, `stomatal_slope.BB`: measured values of physiological parameters specified
 5. `leafT`: leaf temperature, which is required by BETYdb
+
+First, manage the chamber experiment parameters:
 ```{r}
-upload_parameters <- all_parameters %>% 
+upload_parameters_ch <- all_parameters %>% 
   mutate(notes = paste("row", row_number(), "in https://docs.google.com/spreadsheets/d/1doQI0T7vav7LmNdMEoZJDx9iY_Imqa229CLRbRvurFc/#gid=967233489")) %>% 
   filter(genotype == "ME034", 
          TR %in% c("low night temp low light", 
                    "high night temp low light", 
                    "low night temp high light"), 
-         trait %in% c("vmax", "Rd", "g1M", "g1BB")) %>% 
-  mutate(value = ifelse(!is.na(New_Value), New_Value, Value), 
-         se = ifelse(!is.na(New_Value), SE.1, SE)) %>% 
-  mutate(date = ymd(paste0(str_sub(File, -4, -1), 
+         trait %in% c("vmax", "Rd", "g1M", "g1BB", "g0BB")) %>% 
+  mutate(Date = ymd(paste0(str_sub(File, -4, -1), 
                            "-", match(str_sub(File, 1, 3), month.abb), 
                            "-", str_sub(File, -6, -5))), 
          treatment = case_when(TR == "low night temp low light" ~ "regular night temperature", 
                                TR == "high night temp low light" ~ "high night temperature", 
                                TR == "low night temp high light" ~ "high light")) %>% 
-  select(-File, -genotype, -TR, -rep, -method, -Value, -SE, -New_Value, -SE.1, -SD) %>% 
-  spread(trait, value) %>% 
-  rename(local_datetime = date, 
+  select(-File, -genotype, -TR, -rep, -method, -SD, -TR.1) %>% 
+  spread(trait, Value) %>% 
+  rename(local_datetime = Date, 
          Vcmax = vmax, 
          leaf_respiration_rate_m2 = Rd, 
          stomatal_slope.g1 = g1M, 
-         stomatal_slope.BB = g1BB, 
-         SE = se) %>% 
+         stomatal_slope.BB = g1BB,
+         cuticular_cond = g0BB) %>% 
   mutate(leafT = 25, 
-         n = 9999) %>% 
-  replace(is.na(.), "")
+         n = 9999)
 ```
 
 Save cleaned parameter as a .csv file in `upload_params_data` folder in `model-vignettes/BioCro/DARPA`. 
@@ -64,9 +63,22 @@ if(!dir.exists("upload_params_data/")){
   dir.create("upload_params_data")
 }
 
-write.csv(upload_parameters, "upload_params_data/phys_parameters.csv", row.names = FALSE)
+write.csv(upload_parameters_ch, "upload_params_data/phys_parameters_ch.csv", row.names = FALSE)
 ```
 
+Split into a separate .csv file for each parameter type.
+```{r}
+vars<-colnames(upload_parameters_ch)[5:9]
+for(i in vars){
+  removecols <- setdiff(vars, i)
+  new <- subset(upload_parameters_ch, select= setdiff(colnames(upload_parameters_ch), removecols))
+  new2 <- new[complete.cases(new),]
+  #remove leafT for stomatal_slope.g1
+  new3 <- if(i == "stomatal_slope.g1") {subset(new2, select = -leafT)} else {new2}
+  write.csv(new3, paste0("upload_params_data/phys_parameters_ch_", i, ".csv"), row.names = FALSE)
+}
+
+```
 Upload that new parameter data file using the [Bulk Upload](http://welsch.cyverse.org:8000/bety/bulk_upload/start_upload) in Welsch BETYdb. The following additional data, which applies across all the parameters, will have to be entered
 
 - site: Donald Danforth Plant Science Center Growth Chamber
@@ -179,7 +191,7 @@ write.csv(upload_cc, file = "upload_params_data/cut_cond.csv", row.names = FALSE
 
 ## Greenhouse physiological parameters Vmax, Rd, and stomatal slope
 
-Same as physiological parameters as above, but for greenhouse experiments
+Same as physiological parameters as above, but for greenhouse experiments. 
 
 Clean up data to have the final columns: 
 
@@ -220,25 +232,24 @@ if(!dir.exists("upload_params_data/")){
 write.csv(upload_parameters_gr, "upload_params_data/phys_parameters_gr.csv", row.names = FALSE)
 ```
 
-Split dataframe for each parameter type.
+Split into a separate .csv file for each parameter type.
 ```{r}
 vars<-colnames(upload_parameters_gr)[5:9]
 for(i in vars){
   removecols <- setdiff(vars, i)
   new <- subset(upload_parameters_gr, select= setdiff(colnames(upload_parameters_gr), removecols))
   new2 <- new[complete.cases(new),]
+  #remove leafT for stomatal_slope.g1
   new3 <- if(i == "stomatal_slope.g1") {subset(new2, select = -leafT)} else {new2}
   write.csv(new3, paste0("upload_params_data/phys_parameters_gr_", i, ".csv"), row.names = FALSE)
 }
-
-#remove leafT for stomatal_slope.g1
 
 
 ```
 
 Upload that new parameter data file using the [Bulk Upload](http://welsch.cyverse.org:8000/bety/bulk_upload/start_upload) in Welsch BETYdb. The following additional data, which applies across all the parameters, will have to be entered
 
-- site: Donald Danforth Plant Science Center Growth Chamber
+- site: Donald Danforth Plant Science Center Greenhouse
 - species: Setaria viridis
 - access_level: Internal & Collaborators
 - cultivar: ME-034
